# UMA

./: .gitignore  Cargo.toml  GUI.py  LICENSE  README.md  copy.py  edit.py  requirements.txt  script.py  use.py
dev/: GUI.py  edit.py
docs/: README.md  docs.md  license
src/: GUI.py  config.rs  files.rs  key.rs  main.rs  style.rs  use.py
src/CLI/: script.py  use.py
src/GUI/: base.py  main.py  media.py  player.py  video.py
