[package]
name = "untitled_media_app"
version = "0.1.0"
authors = ["YJH16120 <yapjiahong2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
crossterm = "0.19.0"
serde = "1.0.117"
serde_derive = "1.0"
serde_json = "1.0.64"