[package]
name = "uma"
version = "0.1.0"
authors = ["YJH16120 <yapjiahong2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
crossterm = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.64"
directories-next = "2.0.0"
